logs/cir-cuda/3DCONV_3DConvolution.hip.cpp.cir.log
COMMAND: /workspace/llvm-bin/clang-23 -fclangir --gcc-install-dir=/usr/lib/gcc/x86_64-linux-gnu/11 -x hip --hip-path=/opt/rocm-6.3.0 --offload-arch=gfx942 -D__AMDGCN_WAVEFRONT_SIZE=64 -I/root/polybenchGpu/CUDA/3DCONV -std=c++17 -O0 -c /root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp -I/root/polybenchGpu/HIP -I/root/polybenchGpu/HIP/3DCONV -o /tmp/3DCONV_3DConvolution.hip.cpp.cir.o

/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:109:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  109 |         hipGetDeviceProperties(&deviceProp, GPU_DEVICE);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.3.0/include/hip/hip_runtime_api.h:91:32: note: expanded from macro 'hipGetDeviceProperties'
   91 | #define hipGetDeviceProperties hipGetDevicePropertiesR0600
      |                                ^
/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:111:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  111 |         hipSetDevice( GPU_DEVICE );
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:146:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  146 |         hipMalloc((void **)&A_gpu, sizeof(DATA_TYPE) * NI * NJ * NK);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:147:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  147 |         hipMalloc((void **)&B_gpu, sizeof(DATA_TYPE) * NI * NJ * NK);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:148:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  148 |         hipMemcpy(A_gpu, A, sizeof(DATA_TYPE) * NI * NJ * NK, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:149:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  149 |         hipMemcpy(B_gpu, B, sizeof(DATA_TYPE) * NI * NJ * NK, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:163:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  163 |         hipDeviceSynchronize();
      |         ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:168:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  168 |         hipMemcpy(B_outputFromGpu, B_gpu, sizeof(DATA_TYPE) * NI * NJ * NK, hipMemcpyDeviceToHost);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:170:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  170 |         hipFree(A_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3DCONV/3DConvolution.hip.cpp:171:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  171 |         hipFree(B_gpu);
      |         ^~~~~~~~~~~~~~
loc("/opt/rocm-6.3.0/include/hip/amd_detail/hip_assert.h":70:3): error: 'cir.cast' op result type address space does not match the address space of the operand
fatal error: CIR module verification error before running CIR-to-CIR passes
clang-23: error: clang frontend command failed with exit code 70 (use -v to see invocation)
clang version 23.0.0git (git@github.com:llvm/llvm-project.git f30c3bb2647d4385c9d2035b9a661ecc0bcca813)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /workspace/llvm-bin
Build config: +assertions
clang-23: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang-23: note: diagnostic msg: /tmp/3DConvolution-gfx942-5f0194.hip
clang-23: note: diagnostic msg: /tmp/3DConvolution-4fbeb1.hip
clang-23: note: diagnostic msg: /tmp/3DConvolution-gfx942-5f0194.sh
clang-23: note: diagnostic msg: 

********************
